syntax = "proto3";

package recommendation;

option go_package = "github.com/cqchien/ecomerce-rec/backend/proto";

service RecommendationService {
  // Record user interaction with a product
  rpc RecordInteraction(RecordInteractionRequest) returns (RecordInteractionResponse);
  
  // Get personalized recommendations for a user
  rpc GetUserRecommendations(GetUserRecommendationsRequest) returns (GetUserRecommendationsResponse);
  
  // Get products similar to a given product
  rpc GetProductRecommendations(GetProductRecommendationsRequest) returns (GetProductRecommendationsResponse);
  
  // Get trending products
  rpc GetTrendingProducts(GetTrendingProductsRequest) returns (GetTrendingProductsResponse);
  
  // Calculate product similarities (admin operation)
  rpc CalculateSimilarities(CalculateSimilaritiesRequest) returns (CalculateSimilaritiesResponse);
  
  // Calculate trending scores (admin operation)
  rpc CalculateTrendingScores(CalculateTrendingScoresRequest) returns (CalculateTrendingScoresResponse);
  
  // Health check
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

message RecordInteractionRequest {
  string user_id = 1;
  string product_id = 2;
  string interaction_type = 3; // view, add_to_cart, purchase, wishlist, remove_cart, search
  map<string, string> metadata = 4;
}

message RecordInteractionResponse {
  bool success = 1;
  string message = 2;
}

message GetUserRecommendationsRequest {
  string user_id = 1;
  int32 limit = 2;
  string algorithm = 3; // collaborative_filtering, content_based, hybrid, trending, personalized
}

message GetUserRecommendationsResponse {
  repeated string product_ids = 1;
  string algorithm = 2;
}

message GetProductRecommendationsRequest {
  string product_id = 1;
  int32 limit = 2;
}

message GetProductRecommendationsResponse {
  repeated string product_ids = 1;
}

message GetTrendingProductsRequest {
  int32 limit = 1;
}

message GetTrendingProductsResponse {
  repeated string product_ids = 1;
}

message CalculateSimilaritiesRequest {
  // Empty - calculates for all products
}

message CalculateSimilaritiesResponse {
  bool success = 1;
  string message = 2;
}

message CalculateTrendingScoresRequest {
  // Empty - calculates for all products
}

message CalculateTrendingScoresResponse {
  bool success = 1;
  string message = 2;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
  string service = 2;
}
